# backend_inspection

./: .coverage  .gitignore  .pre-commit-config.yaml  .yamllint  mypi.ini  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
industrial_inspection/: exceptions.py  test.py
industrial_inspection/api/: dependencies.py  main.py
industrial_inspection/api/routes/: camera.py  config.py  export.py  health.py  prediction.py
industrial_inspection/camera/: controller.py  singleton.py
industrial_inspection/config/: camera_config.py  detection_config.py  model_config.py
industrial_inspection/config/files/: camera-config.json  detection_config.json  model_config.json
industrial_inspection/contracts/: camera.py  prediction.py  quality.py
industrial_inspection/image_processing/: geometry.py  preprocessing.py  segmentation.py  weighting.py
industrial_inspection/ml/: model_builder.py  model_loader.py  predictor.py
industrial_inspection/ml/architectures/: custom_cnns.py
industrial_inspection/quality_checks/: __init__.py  alignment_check.py  base_check.py  checker.py  illumination_check.py  occupation_check.py  sharpness_check.py  uniformity_check.py
industrial_inspection/reporting/: excel_builder.py
industrial_inspection/utils/: logging_config.py
scripts/: start_server.py
tests/: conftest.py
tests/integration/: test_api_camera.py
tests/unit/: test_quality_checks.py  test_segmentation.py
