[project]
name = "backend-inspection"
version = "0.1.0"
description = "Backend FastAPI pour inspection et analyse"
authors = [
    {name = "Victor Séchet", email = "victor.sechet@gmail.com"},
]
requires-python = ">=3.10,<3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "python-multipart>=0.0.20,<0.1.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-core>=2.41.0,<3.0.0",
    
    # Deep Learning
    "torch==2.5.0",
    "torchvision==0.20.0",
    
    # Image Processing
    "opencv-python>=4.10.0,<5.0.0",
    "pillow>=11.3.0,<12.0.0",
    "numpy>=1.26.4,<2.0.0",
    
    # RAG & Vector Database
    "chromadb>=0.4.22,<0.5.0",
    "langchain>=0.1.0,<0.2.0",
    "langchain-community>=0.0.10,<0.1.0",
    "sentence-transformers>=2.3.1,<3.0.0",
    "ollama>=0.1.6,<0.2.0",
    
    # Utilities
    "annotated-types>=0.7.0,<0.8.0",
    "typing-extensions>=4.15.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Linting & Formatting
    "ruff>=0.12.0,<0.13.0",
    "mypy>=1.7.1,<2.0.0",
    
    # Pre-commit
    "pre-commit>=4.0.0,<5.0.0",
    
    # Testing
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<0.28.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstrings)
    "ARG", # flake8-unused-arguments
]

ignore = [
    "D107",  # Missing docstring in __init__ (redondant avec class docstring)
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "E501",  # Line too long (géré par formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Imports inutilisés OK dans __init__.py
"**/tests/**" = ["D"]     # Pas de docstrings obligatoires dans les tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false

# Ignorer les imports tiers sans stubs
[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "torch.*",
    "torchvision.*",
    "sklearn.*",
    "chromadb.*",
    "langchain.*",
    "sentence_transformers.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
